# notebot

./: .coderabbit.yaml  .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependabot-auto-merge.yml
backend/: .gitignore  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  upload.py
backend/app/prompts/: summary.py
backend/app/routers/: history.py  summary.py  upload.py
backend/app/schemas/: __init__.py  history.py  summary.py  upload.py
backend/app/services/: file_reader.py  stt.py  summary.py
backend/app/services/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
backend/tests/: conftest.py  test_file_reader.py  test_history.py  test_stt.py  test_summary.py  test_upload.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/history/[id]/: page.tsx
frontend/src/app/stt/: page.tsx
frontend/src/app/stt-summary/: page.tsx
frontend/src/components/: FileUploader.tsx  Header.tsx  LLMSettings.tsx  MarkdownPreview.tsx  ProcessingSteps.tsx  ThemeToggle.tsx
frontend/src/components/icons/: AnthropicLogo.tsx  GeminiLogo.tsx  OpenAILogo.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  tabs.tsx
frontend/src/hooks/: useHistory.ts  useTheme.ts
frontend/src/lib/: utils.ts
